# Kevernals

./: .gitignore  CMakeLists.txt  Config.bat  Notes.md  README.md  TODO.md  start_ADAM_menu.bat  start_CMakeGui.bat  start_VisualStudio.bat  start_VsCode.bat
CMake/: FindAltumiraPlus.cmake  FindDICOMconnect.cmake  kevernalsFunctionAddHeaderOnly.cmake  kevernalsFunctionAddTest.cmake  kevernalsFunctionMoveTargetToVSFolder.cmake  kevernalsFunctionPopulateTargetProperties.cmake
backup/: config.bat
backup/altumira/: AltumiraErrorCode.cpp  AltumiraErrorCode.h  AltumiraParameters.h
backup/dataHandling/: CMakeLists.txt  DICOMReader.cpp  DICOMReader.h  DICOMReaderErrorCode.cpp  PhantomMaker.cpp  PhantomMaker.h
backup/geometry/: CMakeLists.txt  RadonMatrixErrorCode.cpp  RadonMatrixErrorCode.h  RadonMatrixManager.cpp  RadonMatrixManager.h  TomoGeometry.cpp  TomoGeometry.h  TomoGeometryParser.h  TomoProjectionsSet.cpp  TomoProjectionsSet.h  TomoTable.cpp  TomoTable.h  TomoVolume.cpp  TomoVolume.h
backup/projection/: CMakeLists.txt  IProjector.cpp  IProjector.h  ProjectorErrorCode.cpp  RayTracingProjector.cpp  RayTracingProjector.h  ShiftAndAddProjector.cpp  ShiftAndAddProjector.h
backup/reconstruction/: CMakeLists.txt  ITomosynthesisReconstructor.cpp  ITomosynthesisReconstructor.h  Projector.cu  Projector.h  TomosynthesisARTReconstructor.cpp  TomosynthesisARTReconstructor.h  TomosynthesisFBPReconstructor.cpp  TomosynthesisFBPReconstructor.h  TomosynthesisReconstructorErrorCode.cpp  TomosynthesisReconstructorErrorCode.h
backup/toys/: CMakeLists.txt  ToySet.h  ToysGeometryUtils.h
resources/: CMakeLists.txt  CopyResources.cmake.in  Rad_CHEST_PA_LK0_Fuji_01.xray3  fileForSpeedUp.xray3  testImage.tif  testImage.tiff
source/: CMakeLists.txt
source/commons/: CMakeLists.txt  DataTypeValidator.h  GeometryUtils.h  GlobalUtils.h  HistogramMatchingTools.h  ImageDataPtr.h  MagicEnum.h  Maths.h  PrintErrorCode.h  Result.h  TomoErrorCondition.cpp  TomoErrorCondition.h  outcome.hpp
source/commons/tinyXML/: CMakeLists.txt
source/mains/: CMakeLists.txt  mainMachineLearningTrial.cpp  mainPhantomMakerTest.cpp  mainProjectorTest.cpp  mainReconstruct.cpp  mainSimple.cpp  mainToysTest.cpp
source/modules/: CMakeLists.txt
source/modules/altumira/: AltumiraImageProcessing.cpp  AltumiraImageProcessing.h  CMakeLists.txt
source/modules/dataHandling/: CMakeLists.txt  DICOMReader.cpp  DICOMReader.h  DICOMReaderErrorCode.h  PhantomMaker.cpp  PhantomMaker.h
source/modules/geometry/: CMakeLists.txt  Cylinder.h  Dim2.h  Dim2Vectorial.h  Dim2Vectorial_test.cpp  Dim2_test.cpp  Dim3.h  Dim3Vectorial.h  Dim3Vectorial_test.cpp  Dim3_test.cpp  Pave.h  Pixel.cpp  Pixel.h  PixelOnProjection.h  PixelSpacing.cpp  PixelSpacing.h  Position2D.cpp  Position2D.h  Position3D.cpp  Position3D.h  ProjectionData.cpp  ProjectionData.h  Roi2D.h  Roi3D.h  Size2D.cpp  Size2D.h  Size3D.cpp  Size3D.h  Sphere.h  TomoGeometry.cpp  TomoGeometry.h  TomoGeometryErrorCode.cpp  TomoGeometryErrorCode.h  TomoGeometryParser.cpp  TomoProjections.cpp  TomoProjections.h  TomoProjectionsSet.cpp  TomoProjectionsSet.h  TomoTable.cpp  TomoTable.h  (+16 more)
source/modules/projection/: CMakeLists.txt  IProjector.cpp  IProjector.h  ShiftAndAddProjector.cpp  ShiftAndAddProjector.h
source/modules/reconstruction/: CMakeLists.txt  CudaErrorHandler.h  Projector.cu  Projector.h  ProjectorErrorCode.h  Reconstructors.h  ReconstructorsErrorCode.cpp  ReconstructorsErrorCode.h
source/modules/toys/: ToyMatrixMul.cu  ToyMatrixMul.h  ToySet.cpp
source/test_utils/: CMakeLists.txt  GenericMethods.h  TestInitializer.h
